--- a/app/src/main/res/layout/status_screen.xml
+++ b/app/src/main/res/layout/status_screen.xml
@@ -118,39 +118,48 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/statusScreen_statusText" />
 
-    <EditText
-        android:id="@+id/statusScreen_dateTextInput"
-        android:layout_width="249dp"
-        android:layout_height="54dp"
-        android:layout_marginTop="4dp"
-        android:ems="10"
+    <TextView
+        android:id="@+id/statusScreen_date"
+        android:layout_width="313dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="8dp"
         android:inputType="text"
         android:text="Date"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="#5FEF7B"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/statusScreen_dateText" />
 
-    <EditText
-        android:id="@+id/statusScreen_signedInTimeTextInput"
-        android:layout_width="247dp"
-        android:layout_height="54dp"
+    <TextView
+        android:id="@+id/statusScreen_signedInTime"
+        android:layout_width="291dp"
+        android:layout_height="46dp"
         android:layout_marginTop="8dp"
-        android:ems="10"
         android:inputType="text"
         android:text="Signed In Time"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="#5FEF7B"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.53"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/statusScreen_timedSignedInText" />
 
-    <EditText
-        android:id="@+id/statusScreen_totalHoursTextInput"
-        android:layout_width="257dp"
-        android:layout_height="60dp"
+    <TextView
+        android:id="@+id/statusScreen_totalHours"
+        android:layout_width="295dp"
+        android:layout_height="50dp"
         android:layout_marginTop="4dp"
-        android:ems="10"
         android:inputType="text"
         android:text="Current Total Hours"
+        android:textAlignment="center"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="#5FEF7B"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/statusScreen_totalHoursText" />
@@ -165,19 +174,19 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/statusScreen_signedInTimeTextInput" />
+        app:layout_constraintTop_toBottomOf="@+id/statusScreen_signedInTime" />
 
     <TextView
         android:id="@+id/statusScreen_timedSignedInText"
         android:layout_width="200dp"
         android:layout_height="37dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="16dp"
         android:text="Timed Signed In"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/statusScreen_dateTextInput" />
+        app:layout_constraintTop_toBottomOf="@+id/statusScreen_date" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
