--- a/app/src/main/res/layout/status_screen.xml
+++ b/app/src/main/res/layout/status_screen.xml
@@ -169,7 +169,7 @@
         android:layout_width="165dp"
         android:layout_height="34dp"
         android:layout_marginTop="20dp"
-        android:text="Total Hours"
+        android:text="Elapsed Time"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintEnd_toEndOf="parent"
