--- a/app/src/main/res/layout/status_screen.xml
+++ b/app/src/main/res/layout/status_screen.xml
@@ -154,7 +154,7 @@
         android:layout_height="50dp"
         android:layout_marginTop="4dp"
         android:inputType="text"
-        android:text="Current Total Hours"
+        android:text="00:00:00"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         android:textColor="#5FEF7B"
